<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2011 David Simmons
http://cafbit.com/
 
Copyright 2014 Alexandre Quesnel

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<resources>
    <string name="app_name">Valence</string>
    <string name="about_version">Version: 1.4</string>
    <string name="about_build_date">Build: 2012-07-12</string>
    <string name="about_copyright">
        © 2011-2012 David Simmons
        2014 Alexandre Quesnel
    </string>
    <string name="about_url">http://cafbit.com/</string>
    <string name="about_description">
        Valence turns your Android phone or tablet into a remote
        keyboard and mouse for any computer running a VNC server.
    </string>
    <string name="touchpad_hint_overlay">
        Use this area as a touchpad.\n
        Tap to click.\n
        Tap then swipe to drag.\n
        Two-finger tap to right click.\n
        Two-finger swipe to scroll.\n
    </string>
    <string name="pref_SHOW_TOUCHPAD_HINT_OVERLAY">Show hints</string>
    <string name="pref_SHOW_TOUCHPAD_HINT_OVERLAY_summary">Show UI hints on the touchpad</string>
    <string name="pref_SHOW_USER_TEXT_OVERLAY">Show Typed Text</string>
    <string name="pref_SHOW_USER_TEXT_OVERLAY_summary">Show text that is typed on the touchpad</string>
    <string name="pref_USER_TEXT_OVERLAY_TIMEOUT_SECONDS">Typed Text Timeout</string>
    <string name="pref_USER_TEXT_OVERLAY_TIMEOUT_SECONDS_summary">How long to show the typed on the touchpad</string>
    <string name="pref_SCREEN_OFF_ON_PROXIMITY_SENSOR">Proximity Sensor</string>
    <string name="pref_SCREEN_OFF_ON_PROXIMITY_SENSOR_summary">Turn off the screen using the proximity sensor</string>
    <string name="pref_PROXIMITY_TIMEOUT_SECONDS">Proximity Sensor Timeout</string>
    <string name="pref_PROXIMITY_TIMEOUT_SECONDS_summary">How long to keep the device awake while an object is in proximity to the phone</string>
    <string name="ctrl">Ctrl</string>
    <string name="win">Win</string>
    <string name="alt">Alt</string>
    <string name="shift">Shift</string>
    <string name="esc">Esc</string>
    <string name="toggleKeyboard">Toggle Keyboard</string>
    <string name="fKeys">F-Keys</string>
    <string name="modifierKeys">Mods</string>
    <string name="f1">F1</string>
    <string name="f2">F2</string>
    <string name="f3">F3</string>
    <string name="f4">F4</string>
    <string name="f5">F5</string>
    <string name="f6">F6</string>
    <string name="f7">F7</string>
    <string name="f8">F8</string>
    <string name="f9">F9</string>
    <string name="f10">F10</string>
    <string name="f11">F11</string>
    <string name="f12">F12</string>
    <string name="tab">Tab</string>
    <string name="home">Home</string>
    <string name="end">End</string>
    <string name="pageUp">Pg Up</string>
    <string name="pageDown">Pg Dn</string>
    <string name="insert">Insert</string>
    <string name="backspace">Backspace</string>
    <string name="delete">Del</string>
    <string name="printScreen">Pnt Scn</string>
    <string name="arrowKeys">Arrows</string>
    <string name="arrowUp">↑</string>
    <string name="arrowDown">↓</string>
    <string name="arrowLeft">←</string>
    <string name="arrowRight">→</string>
</resources>
