<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2014 Alexandre Quesnel

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="pref_SHOW_TOUCHPAD_HINT_OVERLAY"
        android:title="@string/pref_SHOW_TOUCHPAD_HINT_OVERLAY"
        android:summary="@string/pref_SHOW_TOUCHPAD_HINT_OVERLAY_summary"
        android:defaultValue="true" />
    <CheckBoxPreference 
        android:key="pref_SHOW_USER_TEXT_OVERLAY" 
        android:title="@string/pref_SHOW_USER_TEXT_OVERLAY" 
        android:summary="@string/pref_SHOW_USER_TEXT_OVERLAY_summary"
        android:defaultValue="true" />
    <EditTextPreference 
        android:inputType="number"
        android:numeric="integer"
        android:key="pref_USER_TEXT_OVERLAY_TIMEOUT_SECONDS" 
        android:title="@string/pref_USER_TEXT_OVERLAY_TIMEOUT_SECONDS" 
        android:summary="@string/pref_USER_TEXT_OVERLAY_TIMEOUT_SECONDS_summary"
        android:defaultValue="15" />
    <CheckBoxPreference 
        android:key="pref_SCREEN_OFF_ON_PROXIMITY_SENSOR" 
        android:title="@string/pref_SCREEN_OFF_ON_PROXIMITY_SENSOR" 
        android:summary="@string/pref_SCREEN_OFF_ON_PROXIMITY_SENSOR_summary"
        android:defaultValue="true" />
    <EditTextPreference 
        android:inputType="number"
        android:numeric="integer"
        android:key="pref_PROXIMITY_TIMEOUT_SECONDS" 
        android:title="@string/pref_PROXIMITY_TIMEOUT_SECONDS" 
        android:summary="@string/pref_PROXIMITY_TIMEOUT_SECONDS_summary"
        android:defaultValue="3600" />
    
</PreferenceScreen>
