<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout_root"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:padding="0dp"
              >
    <ScrollView
        android:id="@+id/about_scroll_view"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
	>
		<LinearLayout
		              android:orientation="vertical"
		              android:layout_width="fill_parent"
		              android:layout_height="fill_parent"
		              android:padding="10dp"
		              >
		    <TextView android:id="@+id/about_name"
		              android:layout_width="wrap_content"
		              android:layout_height="wrap_content"
		              android:textColor="#FFF"
		              android:text="@string/app_name"
		              android:layout_gravity="center_horizontal"
		              android:textSize="24sp"
		              android:paddingBottom="5sp"
		              />
            <TextView android:id="@+id/about_version"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="#FFF"
                  android:typeface="monospace"
                  android:textSize="12sp"
                  android:text="@string/about_version"
                  android:layout_gravity="center_horizontal"
                  android:paddingBottom="5sp"
                  />
            <TextView android:id="@+id/about_build"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="#FFF"
                  android:typeface="monospace"
                  android:textSize="12sp"
                  android:text="@string/about_build_date"
                  android:layout_gravity="center_horizontal"
                  android:paddingBottom="5sp"
                  />
		    <TextView android:id="@+id/about_copyright"
		              android:layout_width="wrap_content"
		              android:layout_height="wrap_content"
		              android:textColor="#FFF"
		              android:text="@string/about_copyright"
		              android:layout_gravity="center_horizontal"
		              android:textSize="16sp"
		              android:paddingBottom="5sp"
		              />
		    <TextView android:id="@+id/about_url"
		              android:layout_width="wrap_content"
		              android:layout_height="wrap_content"
		              android:textColor="#FFF"
		              android:text="@string/about_url"
		              android:layout_gravity="center_horizontal"
		              android:textSize="16sp"
		              android:paddingBottom="10sp"
		              />
	        <TextView android:id="@+id/about_description"
	              android:layout_width="fill_parent"
	              android:layout_height="wrap_content"
	              android:textColor="#FFF"
	              android:text="@string/about_description"
	              android:layout_gravity="center_horizontal"
	              />
        </LinearLayout>
    </ScrollView>
</LinearLayout>